--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "axios": "^1.4.0",
     "axios-retry": "^3.5.1",
     "lodash": "^4.17.21",
+    "material-ui-popup-state": "^5.0.10",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-numeric-keyboard": "^1.0.2",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-simple-keyboard": "^3.6.19",
+    "react-numeric-keyboard": "^1.0.2",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
